--- a/src/app/synth1/synth1.component.html
+++ b/src/app/synth1/synth1.component.html
@@ -1,14 +1,16 @@
 <ul class="set">
-  <li class="white f"></li>
-  <li class="black fs"></li>
-  <li class="white g"></li>
-  <li class="black gs"></li>
-  <li class="white a"></li>
-  <li class="black as"></li>
-  <li class="white b"></li>
-  <li class="white c"></li>
-  <li class="black cs"></li>
-  <li class="white d"></li>
-  <li class="black ds"></li>
-  <li class="white e"></li>
+  <li class="white f" (click)="play_f('f')"></li>
+  <li class="black fs" (click)="play_f('fs')"></li>
+  <li class="white g" (click)="play_f('g')"></li>
+  <li class="black gs" (click)="play_f('gs')"></li>
+  <li class="white a" (click)="play_f('a')"></li>
+  <li class="black as" (click)="play_f('as')"></li>
+  <li class="white b" (click)="play_f('b')"></li>
+  <li class="white c" (click)="play_f('c')"></li>
+  <li class="black cs" (click)="play_f('cs')"></li>
+  <li class="white d" (click)="play_f('d')"></li>
+  <li class="black ds" (click)="play_f('ds')"></li>
+  <li class="white e" (click)="play_f('e')"></li>
 </ul>
+
+<audio src="/assets/sounds/audio.mp3" #audiof></audio>
