--- a/src/app/synth2/synth2.component.html
+++ b/src/app/synth2/synth2.component.html
@@ -1,14 +1,14 @@
 <ul class="set">
-  <li class="white f"></li>
-  <li class="black fs"></li>
-  <li class="white g"></li>
-  <li class="black gs"></li>
-  <li class="white a"></li>
-  <li class="black as"></li>
-  <li class="white b"></li>
-  <li class="white c"></li>
-  <li class="black cs"></li>
-  <li class="white d"></li>
-  <li class="black ds"></li>
-  <li class="white e"></li>
+  <li class="white f"  (click)="play_audio('f')"></li>
+  <li class="black fs" (click)="play_audio('fs')"></li>
+  <li class="white g"  (click)="play_audio('g')"></li>
+  <li class="black gs" (click)="play_audio('gs')"></li>
+  <li class="white a"  (click)="play_audio('a')"></li>
+  <li class="black as" (click)="play_audio('as')"></li>
+  <li class="white b"  (click)="play_audio('b')"></li>
+  <li class="white c"  (click)="play_audio('c')"></li>
+  <li class="black cs" (click)="play_audio('cs')"></li>
+  <li class="white d"  (click)="play_audio('d')"></li>
+  <li class="black ds" (click)="play_audio('ds')"></li>
+  <li class="white e"  (click)="play_audio('e')"></li>
 </ul>
