build and htaccess

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-wrapper">
-    <a routerLink="" class="brand-logo"><img class="logo-img" src="/assets/images/logo.jpg"></a>
+    <a routerLink="" class="brand-logo"><img class="logo-img" src="{{environment.base_folder}}assets/images/logo.jpg"></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a routerLink="synth-1" routerLinkActive="active">Synth 1</a></li>
       <li><a routerLink="synth-2" routerLinkActive="active">Synth 2</a></li>
